# sf-rdf-acl

./: .coverage  .gitignore  README.en.md  README.md  pyproject.toml
.venv_e2e/: pyvenv.cfg
.venv_e2e/Scripts/: activate  activate.bat
doc/design/: RDF防腐层研发计划.md  RDF防腐层阶段9代码与测试详解.md
doc/plan/: SF-RDF-ACL详细改进计划.md
doc/report/: P0-graph模块改进与测试报告_20251019_0836.md  SF-RDF-ACL-3.2文档完善_202510191512.md  SF-RDF-ACL-第一阶段-1.1-query模块改进-报告-202510190937.md  SF-RDF-ACL-第三阶段-3.1-性能基准测试-改进与测试报告-202510191249.md  SF-RDF-ACL-第二阶段-2.1-query模块P1改进-改进与测试报告-202510191209.md  任务1.1.2-聚合查询支持-改进与测试报告-202510182033.md
doc/reports/: 2025-10-17-real-services-validation.md  SF-RDF-ACL综合评估报告_20251018_182342.md  coverage.json  coverage.txt  e2e_verification_202510181706.md  function_coverage-20251019-1807.md  sf-rdf-acl-test-report-20251019-1806.md  sf-rdf-acl-test-report.md  技术缺陷与改进清单.md
doc/usage/: API参考.md
docs/: conf.py  index.rst
docs/api/: connection.rst  converter.rst  graph.rst  provenance.rst  query.rst  transaction.rst
docs/design/: RDF防腐层深化设计.md
docs/examples/: advanced.md  basic_usage.md  integration.md
docs/guides/: best_practices.md  quickstart.md  troubleshooting.md
docs/plan/: SF-RDF-ACL项目-claude评估报告_20251019.md  SF-RDF-ACL项目评估报告.md
examples/: aggregation_example.py  batch_operations_example.py  conditional_clear_example.py  end_to_end_scenario.py  helpers.py  manage_graphs.py  project_graph.py  requirements.txt  run_query.py  run_upsert.py  write_provenance.py
examples/config/: demo.yaml
tests/: conftest.py  test_rdf_end_to_end.py
tests/legacy/: conftest.py
(+78 files in other folders)
